Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Notifications : notifyConfirmUnsubscribe() wrong var name
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-